# modular-forms-ml

./: .gitignore  README.md  __init__.py  core.py  dataset.py  generators.py  hauptmodul.py  pyproject.toml  requirements.txt
